--- a/index.html
+++ b/index.html
@@ -14,60 +14,47 @@
       background: #fff;
       color: #222;
       display: flex;
+      flex-direction: column;
       min-height: 100vh;
-      flex-direction: row;
       word-wrap: break-word;
     }
-
     nav {
-      position: fixed;
-      top: 0; left: 0;
-      height: 100vh;
-      width: 220px;
       background: #111;
       color: #eee;
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem 1rem;
-      box-shadow: 5px 0 15px rgba(0,0,0,0.2);
-      z-index: 10;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
     nav h2 {
-      margin-bottom: 2rem;
-      font-weight: 700;
-      letter-spacing: 2px;
-      font-size: 1.5rem;
+      display: none;
     }
     nav a {
       text-decoration: none;
       color: #eee;
       font-weight: 500;
-      margin: 1rem 0;
-      font-size: 1.1rem;
-      width: 100%;
-      text-align: center;
-      padding: 0.6rem 0;
+      margin: 0.5rem 1rem;
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
       border-radius: 10px;
       transition: background 0.3s;
     }
     nav a:hover, nav a.active {
       background: #444;
-      color: #fff;
     }
-
     main {
-      margin-left: 240px;
-      padding: 3rem 4rem;
+      padding: 2rem 1rem;
       max-width: 900px;
-      flex: 1;
+      margin: auto;
     }
-
     section {
       margin-bottom: 3rem;
       background: #fafafa;
       border-radius: 15px;
-      padding: 2rem 2.5rem;
+      padding: 2rem;
       box-shadow:
         10px 10px 20px #d9d9d9,
         -10px -10px 20px #ffffff;
@@ -79,217 +66,190 @@
       opacity: 1;
       transform: translateY(0);
     }
-
-    h1, h2 {
-      color: #111;
-    }
     h1 {
-      font-size: 3rem;
-      letter-spacing: 6px;
+      font-size: 2.2rem;
       margin-bottom: 0.5rem;
+      text-align: center;
     }
     h2 {
-      font-size: 2rem;
-      margin-bottom: 1.2rem;
-      border-bottom: 3px solid #111;
-      padding-bottom: 0.5rem;
-      letter-spacing: 2px;
+      font-size: 1.6rem;
+      border-bottom: 2px solid #111;
+      padding-bottom: 0.4rem;
+      margin-bottom: 1rem;
     }
-
     p, li {
-      font-weight: 400;
+      font-size: 1rem;
       line-height: 1.6;
-      font-size: 1.1rem;
     }
-
     ul {
       list-style: none;
-      padding-left: 1rem;
+      padding-left: 0;
     }
-
     li {
-      padding: 0.4rem 0;
-      border-left: 3px solid #111;
       margin-bottom: 0.6rem;
-      transition: border-color 0.3s;
-      cursor: default;
+      border-left: 3px solid #111;
+      padding-left: 0.6rem;
       display: flex;
-      align-items: center;
       justify-content: space-between;
       flex-wrap: wrap;
     }
-    li:hover {
-      border-color: #444;
-    }
-
     .btn-download {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.8rem;
-      background: linear-gradient(145deg, #000, #222);
+      display: inline-block;
+      background: #111;
       color: #fff;
-      padding: 0.9rem 2rem;
+      padding: 0.7rem 1.5rem;
       border-radius: 50px;
-      font-weight: 700;
-      font-size: 1.1rem;
+      font-weight: bold;
       text-decoration: none;
-      box-shadow:
-        4px 4px 8px #121212,
-        -4px -4px 8px #2c2c2c,
-        inset 2px 2px 5px #1a1a1a,
-        inset -2px -2px 5px #282828;
-      transition: all 0.3s ease;
-      cursor: pointer;
-      user-select: none;
       margin-top: 1rem;
+      transition: 0.3s;
     }
     .btn-download:hover {
-      background: linear-gradient(145deg, #444, #000);
-      box-shadow:
-        6px 6px 12px #0a0a0a,
-        -6px -6px 12px #3c3c3c,
-        inset 3px 3px 7px #1f1f1f,
-        inset -3px -3px 7px #3a3a3a;
-      transform: translateY(-3px);
+      background: #333;
     }
-
     .download-certif {
-      background: linear-gradient(145deg, #000, #222);
+      background: #222;
       color: #fff;
-      padding: 0.3rem 0.7rem;
-      font-weight: 700;
-      border-radius: 15px;
-      font-size: 0.9rem;
+      padding: 0.3rem 0.6rem;
+      border-radius: 12px;
       text-decoration: none;
-      margin-left: 0.6rem;
-      box-shadow:
-        2px 2px 5px #121212,
-        -2px -2px 5px #2c2c2c,
-        inset 1px 1px 3px #1a1a1a,
-        inset -1px -1px 3px #282828;
-      transition: background 0.3s ease;
-      flex-shrink: 0;
+      font-size: 0.9rem;
     }
     .download-certif:hover {
-      background: linear-gradient(145deg, #444, #000);
+      background: #444;
     }
-
     #toggleSkills {
       background: #111;
       color: #fff;
       border: none;
-      padding: 0.6rem 1.5rem;
-      border-radius: 40px;
-      font-weight: 700;
+      padding: 0.5rem 1rem;
+      border-radius: 25px;
+      font-weight: bold;
       cursor: pointer;
       margin-bottom: 1rem;
-      box-shadow:
-        5px 5px 15px #999,
-        -5px -5px 15px #fff;
-      user-select: none;
     }
-    #toggleSkills:hover {
-      background: #333;
-    }
-
     #skillsList {
-      list-style: square inside;
       display: none;
+      list-style: square inside;
       margin-top: 0.5rem;
     }
-
     #contact p {
-      margin: 0.6rem 0;
-      font-weight: 600;
+      margin: 0.5rem 0;
     }
-    #contact a {
-      color: #111;
-      text-decoration: none;
-      font-weight: 700;
-    }
-    #contact a:hover {
-      text-decoration: underline;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        position: static;
-        height: auto;
-        width: 100%;
-        flex-direction: row;
-        padding: 0.8rem 1rem;
-        justify-content: space-around;
-        box-shadow: none;
-      }
-      nav h2 {
-        display: none;
-      }
-      main {
-        margin-left: 0;
-        padding: 2rem 1.5rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      body {
-        flex-direction: column;
-      }
-
+    @media (max-width: 600px) {
       nav {
         flex-direction: column;
-        padding: 1rem;
+        align-items: center;
       }
-
       nav a {
-        font-size: 0.95rem;
-        padding: 0.5rem;
         margin: 0.3rem 0;
+        width: 100%;
+        text-align: center;
       }
-
-      main {
-        padding: 1rem;
-      }
-
       h1 {
-        font-size: 2rem;
-        letter-spacing: 2px;
-      }
-
-      h2 {
-        font-size: 1.5rem;
-      }
-
-      .btn-download {
-        font-size: 1rem;
-        padding: 0.6rem 1.5rem;
-        gap: 0.5rem;
-      }
-
-      li {
-        font-size: 0.95rem;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .download-certif {
-        margin-top: 0.3rem;
-      }
-
-      #toggleSkills {
-        font-size: 0.9rem;
-        padding: 0.5rem 1rem;
+        font-size: 1.8rem;
       }
     }
   </style>
 </head>
 <body>
 
-<!-- NAVIGATION + MAIN remain unchanged, keep your full body here -->
-<!-- only <style> and responsive logic are updated -->
+<nav>
+  <h2>Lahcen Oum</h2>
+  <a href="#profil" class="active">Profil</a>
+  <a href="#competences">Compétences</a>
+  <a href="#experience">Expérience</a>
+  <a href="#formations">Formations</a>
+  <a href="#certifications">Certifications</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-<!-- keep all your HTML content (nav, main, sections, etc.) here as it was -->
-<!-- JS remains the same -->
+<main>
+  <section id="profil" class="visible">
+    <h1>Elhoussaine Oumlal</h1>
+    <p><em>Technicien spécialisé en systèmes & réseaux</em></p>
+    <a href="cv oumlal elhoussaine.pdf" class="btn-download" download>Télécharger CV</a>
+    <p style="margin-top:1rem;">
+      Technicien spécialisé en infrastructures digitales, option systèmes et réseaux. Compétences en administration réseau, cybersécurité, virtualisation, et maintenance informatique.
+      Sérieux, curieux et orienté solutions, je cherche à intégrer une entreprise dynamique pour contribuer à la transformation digitale et la sécurité des systèmes.
+    </p>
+  </section>
+
+  <section id="competences">
+    <h2>⚙ Compétences</h2>
+    <button id="toggleSkills">Afficher les compétences ▼</button>
+    <ul id="skillsList">
+      <li>Administration Réseau (Cisco, pfSense)</li>
+      <li>Windows Server, Linux</li>
+      <li>Supervision : Zabbix</li>
+      <li>Virtualisation : Proxmox, VMware, VirtualBox</li>
+      <li>Services : CasaOS, GLPI, WireGuard VPN</li>
+      <li>Bureautique : Word, Excel, PowerPoint</li>
+      <li>Test d'intrusion (Pentesting)</li>
+      <li>Analyse de vulnérabilités</li>
+      <li>Outils pentest : Kali Linux, Metasploit, Nmap, Wireshark</li>
+      <li>Sécurité réseau & gestion pare-feu</li>
+      <li>Scripting basique</li>
+    </ul>
+  </section>
+
+  <section id="experience">
+    <h2>💼 Expérience Professionnelle</h2>
+    <ul>
+      <li>Stage ISTA Bab Tizimi (3 mois)
+        <a href="certificates/stage-ista.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>Stage maintenance Flexrise (1 mois)
+        <a href="certificates/stage-flexrise.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>Stage Faculté des Sciences, Meknès (1 mois)
+        <a href="certificates/stage-flexrise.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>Projet personnel : Déploiement CasaOS</li>
+    </ul>
+  </section>
+
+  <section id="formations">
+    <h2>🎓 Formations</h2>
+    <ul>
+      <li>2023-2025 : Technicien spécialisé systèmes & réseaux
+        <a href="certificates/formation-ista.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>2024-2025 : Formation test d'intrusion
+        <a href="1.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>2022 : Baccalauréat SVT
+        <a href="IMG_20220817_0009(1).jpg" class="download-certif" download>📄</a>
+      </li>
+    </ul>
+  </section>
+
+  <section id="certifications">
+    <h2>🏅 Certifications</h2>
+    <ul>
+      <li>eJPT - eLearnSecurity
+        <a href="certificates/ejpt.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>Ethical Hacking Cisco
+        <a href="certificates/ethical-cisco.pdf" class="download-certif" download>📄</a>
+      </li>
+      <li>Autres certifications
+        <a href="certificates/others.pdf" class="download-certif" download>📄</a>
+      </li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>📍 Contact</h2>
+    <p>📧 Email : <a href="mailto:oumlal068@gmail.com">oumlal068@gmail.com</a></p>
+    <p>📞 Téléphone : 06-20-22-67-21</p>
+    <p>📍 Adresse : Meknès</p>
+    <p>🔗 LinkedIn : <a href="https://www.linkedin.com/in/elhoussaine-oumlal-b5554634b/" target="_blank">Voir le profil</a></p>
+  </section>
+</main>
+
 <script>
+  // Animation section on scroll
   const sections = document.querySelectorAll('section');
   const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
@@ -300,6 +260,7 @@
   }, { threshold: 0.2 });
   sections.forEach(section => observer.observe(section));
 
+  // Toggle compétences
   const btnSkills = document.getElementById('toggleSkills');
   const skillsList = document.getElementById('skillsList');
   btnSkills.addEventListener('click', () => {
@@ -312,6 +273,7 @@
     }
   });
 
+  // Scroll nav active link
   const navLinks = document.querySelectorAll('nav a');
   window.addEventListener('scroll', () => {
     let current = '';
