--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <h2>🎓 Formations</h2>
     <ul>
       <li>2023-2025 : Technicien spécialisé systèmes & réseaux
-        <a href="certificates/formation-ista.pdf" class="download-certif" download>📄</a>
+        <a href="1.pdf" class="download-certif" download>📄</a>
       </li>
       <li>2024-2025 : Formation test d'intrusion
         <a href="1.pdf" class="download-certif" download>📄</a>
