--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
 
 <nav>
-  <h2>Lahcen Oum</h2>
+  <h2>El houssaine Oumlal</h2>
   <a href="#profil" class="active">Profil</a>
   <a href="#competences">Compétences</a>
   <a href="#experience">Expérience</a>
@@ -168,7 +168,7 @@
   <section id="profil" class="visible">
     <h1>Elhoussaine Oumlal</h1>
     <p><em>Technicien spécialisé en systèmes & réseaux</em></p>
-    <a href="cv oumlal elhoussaine.pdf" class="btn-download" download>Télécharger CV</a>
+    <a href="cv oumlal elhoussaine.pdf.pdf" class="btn-download" download>Télécharger CV</a>
     <p style="margin-top:1rem;">
       Technicien spécialisé en infrastructures digitales, option systèmes et réseaux. Compétences en administration réseau, cybersécurité, virtualisation, et maintenance informatique.
       Sérieux, curieux et orienté solutions, je cherche à intégrer une entreprise dynamique pour contribuer à la transformation digitale et la sécurité des systèmes.
@@ -196,14 +196,14 @@
   <section id="experience">
     <h2>💼 Expérience Professionnelle</h2>
     <ul>
-      <li>Stage ISTA Bab Tizimi (3 mois)
-        <a href="certificates/stage-ista.pdf" class="download-certif" download>📄</a>
+      <li>Stage ISTA Bab Tizimi (2024/2025)
+        <a href="doc3.pdf" class="download-certif" download>Télécharger</a>
       </li>
       <li>Stage maintenance Flexrise (1 mois)
-        <a href="certificates/stage-flexrise.pdf" class="download-certif" download>📄</a>
+        <a href="doc4.pdf" class="download-certif" download>Télécharger</a>
       </li>
       <li>Stage Faculté des Sciences, Meknès (1 mois)
-        <a href="certificates/stage-flexrise.pdf" class="download-certif" download>📄</a>
+        <a href="certificates/stage-flexrise.pdf" class="download-certif" download>Télécharger</a>
       </li>
       <li>Projet personnel : Déploiement CasaOS</li>
     </ul>
@@ -213,13 +213,13 @@
     <h2>🎓 Formations</h2>
     <ul>
       <li>2023-2025 : Technicien spécialisé systèmes & réseaux
-        <a href="1.pdf" class="download-certif" download>📄</a>
+        <a href="1.pdf" class="download-certif" download>Télécharger</a>
       </li>
       <li>2024-2025 : Formation test d'intrusion
-        <a href="1.pdf" class="download-certif" download>📄</a>
+        <a href="1.pdf" class="download-certif" download>Télécharger</a>
       </li>
       <li>2022 : Baccalauréat SVT
-        <a href="IMG_20220817_0009(1).jpg" class="download-certif" download>📄</a>
+        <a href="IMG_20220817_0009(1).jpg" class="download-certif" download>Télécharger</a>
       </li>
     </ul>
   </section>
@@ -228,13 +228,13 @@
     <h2>🏅 Certifications</h2>
     <ul>
       <li>eJPT - eLearnSecurity
-        <a href="certificates/ejpt.pdf" class="download-certif" download>📄</a>
+       <!-- <a href="certificates/ejpt.pdf" class="download-certif" download>📄</a>-->
       </li>
       <li>Ethical Hacking Cisco
-        <a href="certificates/ethical-cisco.pdf" class="download-certif" download>📄</a>
+       <!-- <a href="certificates/ethical-cisco.pdf" class="download-certif" download>📄</a>-->
       </li>
       <li>Autres certifications
-        <a href="certificates/others.pdf" class="download-certif" download>📄</a>
+        <!--<a href="certificates/others.pdf" class="download-certif" download>📄</a>-->
       </li>
     </ul>
   </section>
